kubernetes/ingress/ingress-csharpwars.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: csharpwars-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:  
  - hosts:
    - www.csharpwars.com
  rules:
  - host: www.csharpwars.com
    http:
      paths:
      - path: /api
        backend:
          serviceName: csharpwars-api
          servicePort: 80
      - path: /web
        backend:
          serviceName: csharpwars-web
          servicePort: 80
